# tmgui

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  event_handler.rs  main.rs
src/app/: ui.rs  utils.rs
src/app/ui/: email_list.rs  email_view.rs  top_bar.rs
src/app/ui/email_view/: attachment_list.rs
