[package]
name = "tmgui"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
eframe = { version = "0.32.0", features = ["default", "persistence"] }
egui_extras = { version = "0.32.1", features = ["all_loaders"] }
log = "0.4.27"
open = "5.3.2"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
tmapi = "1.0.0"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }

# [dependencies.tmapi]
# git = "https://github.com/doomed-neko/tmapi"
# version = "0.1.4-1"
